<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Is it Taxed?</string>
    <string name="action_settings">Settings</string>
    <string name="here">Here</string>
    <string name="to">To</string>
    <string name="perfect">Search VRN</string>
    <string name="almost">Edit VRN</string>
    <string name="photo">Camera</string>
    <string name="manual">VRN</string>
    <string name="enterManual">Enter Registration Mark</string>
    <string name="findCar">Find This Car</string>
    <string name="photoTxt">To check a car using your camera, tap Camera</string>
    <string name="manualTxt">To check a car by entering its VRN, tap VRN</string>
    <string name="intro">This application is a \'proof of concept\' that allows you to check the vehicle\'s details against a dummy service</string>

</resources>
