<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:text="@string/intro"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:background="#C7D9EB"
            android:textSize="18dp"
            android:text="@string/photoTxt"
            android:gravity="center_vertical"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="fill_parent"
            android:text="@string/photo"
            android:id="@+id/photoButton"
            android:textColor="#333333"
            android:textSize="24dp"
            android:textStyle="bold"
            android:background="#9FAEBC"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:background="#C7D9EB"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:text="@string/manualTxt"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="fill_parent"
            android:text="@string/manual"
            android:id="@+id/regButton"
            android:textColor="#333333"
            android:textSize="24dp"
            android:textStyle="bold"
            android:background="#9FAEBC"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />

    </LinearLayout>


</RelativeLayout>
